--- a/templates/home.html
+++ b/templates/home.html
@@ -16,13 +16,13 @@
 
     <div class="container">
 
-        <div class="alert alert-success" role="alert">
+        <div class="alert alert-secondary" role="alert">
             <h4 class="alert-heading text-center">Information Regarding BodyFat Estimation</h4>
             <hr>
             <p>
                 <div class="markdown-converter__text--rendered">
                     <h3>Context</h3>
-                    <p>Lists estimates of the percentage of body fat determined by underwater<br> weighing and various body circumference measurements for 252 men.</p>
+                    <p>Lists estimates of the percentage of body fat determined by underwater weighing and various body circumference measurements for 252 men.</p>
                     <h3>Educational use of the dataset</h3>
                     <p>This data set can be used to illustrate multiple regression techniques. Accurate measurement of body fat is inconvenient/costly and it is desirable to have easy methods of estimating body fat that are not inconvenient/costly.</p>
                     <h3>Content</h3>
